--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -6,12 +6,12 @@
 
 <div class="container">
   <div class="row m-auto">   
-    <div class="col-1">
+    <div class="col-3">
         <a class='nav-link' href="{% url 'contacts' %}">
         <div class="text-dark text-center"><b>Контакты</b></div>
         </a>
     </div>
-      <div class="col-2">
+      <div class="col-3">
         <a class='nav-link' href="{% url 'personal_data' %}">
           <div class="text-dark text-center "><b>Политика обработки персональных данных</b></div>
         </a>
@@ -21,12 +21,12 @@
           <div class="text-dark text-center"><b>Помощь</b></div>
           </a>
         </div> -->
-          <div class="col-2">
+          <div class="col-3">
         <a class='nav-link' href="{% url 'termsofuse' %}">
           <div class="text-dark text-center "><b>Условия использования</b></div>
           </a>
         </div>
-        <div class="col-2">
+        <div class="col-3">
           <a class='nav-link' href="{% url 'security_policy' %}">
             <div class="text-dark text-center "><b>Правила безопасной оплаты</b></div>
           </a>
@@ -37,19 +37,19 @@
         <a class='nav-link' href="#">
         <div class="text-dark text-center "><b>Партнерство</b></div>
         </a>
-      </div> -->
+      </div>
         <div class="col-2">
-        <!-- <a class='nav-link' href="{% url 'socialmedia' %}"> -->
+        <a class='nav-link' href="{% url 'socialmedia' %}">
         <a class='nav-link' href="#">
         <div class="text-dark text-center"><b>Мы в социальных сетях</b></div>
         </a>
         </div>
           <div class="col-2">
-          <!-- <a class='nav-link' href="{% url 'career' %}"> -->
+          <a class='nav-link' href="{% url 'career' %}">
           <a class='nav-link' href="#">
           <div class="text-dark text-center "><b>Карьера с Ruversity.com</b></div>
           </a>
-          </div>
+          </div>-->
         
       </div>
 </div>
