--- a/templates/subject_page.html
+++ b/templates/subject_page.html
@@ -98,7 +98,7 @@
     </div>
 {% elif transaction.buyer == request.user and transaction.course == subject %}
     <div class="card-footer">
-        <h5 class=”text-left”>Вы уже приобрели данный курс. Перейдите в раздел "Мои курсы"<h5>
+        <h5 class=”text-left”>Вы уже приобрели данный курс. Перейдите в раздел "Мои покупки"<h5>
     </div>
 {% else %}
 
