--- a/templates/workshop/studio.html
+++ b/templates/workshop/studio.html
@@ -209,7 +209,7 @@
     <!-- ==========================End of Pagination========================================== -->
 
 </div>
-
+</div>
 <script>
 console.log ('Scrpt starts')
 
