--- a/templates/mycourses/mycourses.html
+++ b/templates/mycourses/mycourses.html
@@ -3,9 +3,17 @@
 
 {% block content %}
 
-<section class="section">
+<div class="d-flex p-2 bg-dark justify-content-start">
+
+    <div class='col-sm-2'></div>
+    <div class='col-sm-2 text-light text-start'>
+        <h2>Мои курсы</h2>
+    </div>
+
+</div>
     <div class="container">
-        <div class="row">
+    
+        <div class="row mt-2">
             {% for course in my_courses %}
 
         <div class="col-sm-3">
@@ -23,15 +31,15 @@
                     </a>
                     <div class="card-body">
                         <div class="row">
-                            <div class="col"><strong>Created by: </strong>{{course.course.author}}</div>
+                            <div class="col"><strong>Автор: </strong>{{course.course.author}}</div>
                         </div>
                         <div class="row">
-                            <div class="col"><strong>Date posted: </strong>{{course.course.date_posted}}</div>
+                            <div class="col"><strong>Дата: </strong>{{course.course.date_posted}}</div>
                         </div>
                         <div class="row">
                             <div class="col">
                                 <strong>
-                                    Rating:
+                                    Рейтинг:
                                 </strong> {{course.course.av_rating}}
                                 <div class="stars-outer">
                                     <div class="stars-inner" style="width: {{course.course.percent}}"></div>
@@ -41,7 +49,7 @@
             
                         <div class="row">
                             <div class="col">
-                                <strong>Date of purchase:</strong> {{course.date_bought}}
+                                <strong>Покупка:</strong> {{course.date_bought}}
                             </div>
                         </div>
                     </div>
@@ -91,7 +99,7 @@
             </div>
             <!-- ==========================End of Pagination========================================== -->
     </div>
-</section>
+
 
 
 {% endblock %}
