--- a/templates/workshop/author_profile.html
+++ b/templates/workshop/author_profile.html
@@ -27,7 +27,7 @@
                 <input class='form-control' type="text" id="name" name="name" required>
                 </div>
                 <div class="form-group">
-                <input type="submit" value="Submit" class='btn btn-sm btn-block btn-outline-dark'>
+                <input type="submit" value="Отправить" class='btn btn-sm btn-block btn-outline-dark'>
                 <!-- <input type="submit" value="Submit" class="btn btn-info btn-block"> -->
                 <!-- <button type='submit'>Load</button><br> -->
                 </div>
@@ -50,13 +50,13 @@
 
                     <div class="form-group">
                             <label for="first_name">Имя</label>
-                            <input class='form-control' type="text" id="first_name" name="first_name" required>
+                            <input class='form-control' type="text" id="first_name" name="first_name" placeholder="Как написано на карте" required>
                     </div>
                      
 
                     <div class="form-group">
                             <label for="last_name">Фамилия</label>
-                            <input class='form-control' type="text" id="last_name" name="last_name" required>
+                            <input class='form-control' type="text" id="last_name" name="last_name" placeholder="Как написано на карте" required>
                     </div>
                    
                     <div class="form-group">
