--- a/templates/workshop/edit_section.html
+++ b/templates/workshop/edit_section.html
@@ -221,6 +221,7 @@
 
 
 <script>
+    //передает все необходимые значения, такие как: lecuture.id, lecture.title & so on
     console.log('start OK')
     const lectures = document.querySelectorAll('#lectureModal');
     const titles = document.querySelectorAll('#lecture_title');
@@ -237,9 +238,6 @@
                 lectures[i].classList.remove('openModal')
             })
         }
-
-
-
     console.log('end OK')
 </script>
 
