--- a/static/style.css
+++ b/static/style.css
@@ -6,11 +6,18 @@ body {
   font-family: Arial, Helvetica, sans-serif
 }
 
+h3 {
+  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-weight: 300;
+  font-size: 2rem;
+}
+
 h5 {
   font-size: 1.2rem;
 }
 .menu_font {
-  font-size: 0.7rem;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+
 }
 
 .rating {
@@ -519,20 +526,61 @@ select > option {
 }
 
 #box {
-  padding: 2rem;
+  padding: 1rem;
   border-style: dashed;
   border-color: grey;
+
 }
 
-.lecture_modal {
+.lecture_box {
+  padding: 1rem;
+  margin: auto;
+  /* display: block; */
+  position: relative;
+  top: 20Vh;
+  border-radius: 0.5%;
+  /* position: absolute; */
+  width: 65%;
+  height: 47%;
+  background-color: white;
+  /* overflow-y: scroll; */
+  /* overflow-y: auto; */
+}
+
+#lectureModal {
   display: none;
 }
 
-.lectureModal.openModal {
+#lectureModal.openModal {
   display: block;
+ 
+}
+
+.hide {
+  /* display: block; */
+  /* display: none; */
   position: fixed;
-  top: 12rem;
-  width: 100rem;
-  min-height: 10rem;
-  left: 15rem;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  overflow-y: scroll;
+  opacity: 100%;
+  /* visibility: visible;
+  visibility: hidden; */
+}
+
+.page_location {
+  margin: auto;
+  /* display: block; */
+  position: relative;
+  top: 20Vh;
+  border-radius: 0.5%;
+  /* position: absolute; */
+  width: 60%;
+  height: 50%;
+  background-color: white;
+  /* overflow-y: scroll; */
+  /* overflow-y: auto; */
 }
